Fixing gap in tags

--- a/src/content/Content.css
+++ b/src/content/Content.css
@@ -49,6 +49,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 25px;
 }
 
 .project-preview {
